[package]
name = "arcos-file-downloader"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.38.0", features = ["rt", "macros", "fs"] }
futures = "0.3.30"
gumdrop = "0.8.1"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
reqwest = { version = "0.12.5", features = ["json"] }
url = "2.5.2"
bytes = "1.6.0"
base64 = "0.22.1"

[profile.release]
lto = "thin"
strip = "debuginfo"
